refactored folders verified on docker; introduced postgres enum